[package]
name = "voxel-tracer"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./shader", "./shared"]

[dependencies]
pollster = "0.3.0"
tokio = { version = "1.32.0", features = ["full"] }
wgpu = { version = "0.17.0", features = ["spirv"] }
winit = "0.28.6"
shared = { path = "./shared" }
bytemuck = { version = "1.6.3", features = ["derive"] }
env_logger = "0.10.0"
rand = "0.8.5"

[build-dependencies]
spirv-builder = "0.9.0"
